--- a/src/components/DarkToggle/darktoggle.css
+++ b/src/components/DarkToggle/darktoggle.css
@@ -15,6 +15,7 @@
     background-color: white;
     box-shadow: 0px 2px 5px #e4e7ec;
     transition: background-color 250ms;
+    cursor: pointer;
   }
   
   .toggle-checkbox:checked ~ .toggle-slot {
